@@ -3,7 +3,8 @@ Fixed in version 4.1.1:
   * Check on convergence of variable-cell damped dynamics was not
     working as expected in the presence of constraints
 
-  * Velocity rescaling in CP was not working
+  * Velocity rescaling in CP was not working, and it was performed
+    also if not required when ion velocities were set to 'random'
 
   * ESPRESSO_TMPDIR is caught by gipaw.x as well
  
